[package]
name = "gd32vf103"
version = "0.1.0"
authors = ["xermicus <bigcyrill@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gd32vf103xx-hal = "0.3.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
riscv = "0.5.4"
st7735-lcd = "0.7"
riscv-rt = "0.6.1"
panic-halt = "0.2.0"
embedded-graphics = "0.6"
longan-nano = { git = "https://github.com/riscv-rust/longan-nano", features = ["lcd"] }

